k8s/app-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: app-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: mock-console-web
  ports:
    - targetPort: 8080
      port: 8080
