k8s/app-node-port.yml
apiVersion: v1
kind: Service
metadata:
  name: app-node-port
spec:
  type: NodePort
  selector:
    app: mock-console-web # pod label
  ports:
    - targetPort: 8080 # exposed port in the container
      port: 8080 # internal port
      nodePort: 31111 # external port
