k8s/mongo-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: mongo
  ports:
    - targetPort: 27017
      port: 27017
